Add. gitignore and stop tracking node_modules

--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<header>
+<h1>Software Development</h1>
+<h1> VS Software Engineer</h1>
+</header>
+<
 <body>
-    
+  <div class="box">
+    <h2>Software Development</h2>
+    <p>Software development is the process of designing, coding, testing, and maintaining software applications. It involves a series of steps that transform user requirements into functional software products. Software developers are responsible for writing code, debugging, and ensuring that the software meets the specified requirements. They often work in teams and collaborate with other stakeholders to deliver high-quality software solutions.</p>
+  </div>
+  <div class="box1">
+    ,
+    <h2>Software Engineer</h2>
+    <p>A software engineer is a professional who applies engineering principles to the design, development, maintenance, testing, and evaluation of software and systems. Software engineers typically have a strong foundation in computer science and engineering concepts. They focus on creating scalable and efficient software solutions, often working on complex systems that require a deep understanding of algorithms, data structures, and system architecture. Software engineers may also be involved in project management and system integration tasks.</p>
+  </div>
 </body>
 </html>
