Hero Image Added

--- a/Index.html
+++ b/Index.html
@@ -10,8 +10,11 @@
 <h1>Software Development</h1>
 <h1> VS Software Engineer</h1>
 </header>
-<
+
 <body>
+    <div class="hero">
+        <img src="/Pictures/Laptop.png" alt="">
+    </div>
   <div class="box">
     <h2>Software Development</h2>
     <p>Software development is the process of designing, coding, testing, and maintaining software applications. It involves a series of steps that transform user requirements into functional software products. Software developers are responsible for writing code, debugging, and ensuring that the software meets the specified requirements. They often work in teams and collaborate with other stakeholders to deliver high-quality software solutions.</p>
